# pre-commit-hooks-cpp

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
hooks/: check_commit_msg.py  check_linebreak.py  check_utf8.py  check_version.py
