[metadata]
name = pre_commit_hooks_cpp
version = 1.0.0
description = pre-commit hooks for C/C++
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xyz1001/pre-commit-hooks-cpp
author = xyz1001
author_email = xyz1001@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    check-commit-msg = hooks.check_commit_msg:main

[options.packages.find]

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
